css/index.css
/* css/index.css */
body {
  background-color: #f4f4f9;
  color: #333;
  font-family: 'Reddit Mono', monospace;
  margin: auto 0;
  padding: 60px 0 0 0;

}

h1,
h2,
h3,
h4 {
  color: #2c3e50;
  margin: 10px 0;
}

h1 {
  font-size: 2rem;
  text-align: center;
}

nav a {
  color: white;
  padding: 10px 15px;
  text-decoration: none;
  transition: color 0.3s ease;
}

nav a:hover {
  color: #f0f0f0;
  /* Light hover effect for links */
}


nav ul {
  display: flex;
  justify-content: center;
  list-style: none;
  background-color: #2c3e50;
  padding: 10px 0;
  position: fixed;
  top: 0;
  width: 100%;
  margin: 0;
  z-index: 1000;
}

section {
  margin: 60px 20px 20px;
  padding: 20px;
  background: white;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
}

.section-content {
  text-align: center;
  border: 2px solid #00FF00;
  /* Green border */
}

p {
  /* light green */
  margin: 0;
}

a {
  text-decoration: none;
}

/* ul {
 
} */

/* Experience Section */
#experience-item {
  display: block;
  border-radius: 8px;
  margin-bottom: 10px;
  border: 2px solid #FF00FF;
  /* Magenta border */
}

.experience {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 20px;
  margin: 0;
}

.job {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-top: 20px;
}

.job-title {
  display: flex;
  align-items: start;
  justify-content: start;
  flex: 1;
  max-width: 50%;
  width: 50%;
}

.job-dates {
  display: flex;
  align-items: start;
  justify-content: end;
  flex: 1;
  max-width: 50%;
  width: 50%;
}

.job-description {
  display: flex;
  align-items: end;
  margin-right: 20px;
  width: 100%;
  max-width: 100%;
}

/* Connect Section */


.social-icons {
  display: flex;
  list-style-type: none !important;
  /* color: #2b6cb0; */
}

.connect-link {
  color: #000000;
  text-decoration: none;
  list-style-type: none !important;
}

.connect-link:hover {
  transform: scale(1.05);
}

.connect {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.social-icons {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin-top: 20px;
}

.social-media {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #130909;
}

.social-media:hover {
  transform: scale(1.05);
}

.fa-envelope:before,
.fa-github:before,
.fa-linkedin:before {
  color: white;
}

img[alt] {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  height: auto;
  border: 2px solid #800080;
}

/* Leave a message form */
.contact-form {
  background-color: #ffffff;
  padding: 35px;
  border-radius: 8px;
  box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.10), 0px 4px 6px rgba(0, 0, 0, 0.1);
  max-width: 600px;
  margin: auto;

}

.form-group {
  margin-bottom: 15px;
}

.form-group label {
  display: block;
  margin-bottom: 5px;
  font-weight: bold;
}

.form-group input,
.form-group textarea {
  width: 100%;
  padding: 8px;
  font-size: 16px;
  border-radius: 4px;
  border: 2px solid #ddd;
  transition: border-color 0.3s;
}

.form-group input:focus,
.form-group textarea:focus {
  border-color: #0056b3;
  outline: none;
}

.submit-button {
  background-color: #4CAF50;
  color: white;
  padding: 10px 20px;
  font-size: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.submit-button:hover {
  background-color: #45a049;
}

.contact-form input[required],
.contact-form textarea[required] {
  background-color: #f8f8f8;
}

.contact-form input[placeholder],
.contact-form textarea[placeholder] {
  color: #aaa;
}


/* Edit messages seciton */

.messages-section {
  background-color: #fff;
  padding: 20px;
  margin-top: 20px;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  display: none;
  /* Initially hidden */
}

.messages-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.messages-list li {
  padding: 10px;
  margin-bottom: 10px;
  background-color: #f9f9f9;
  border-radius: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
}

.messages-list li span {
  flex-grow: 1;
  margin-left: 10px;
}

button {
  padding: 5px 10px;
  margin: 0 5px;
  background-color: #4CAF50;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
}

button:hover {
  background-color: #45a049;
}

button.edit-button {
  background-color: #ffa500;
}

button.edit-button:hover {
  background-color: #cc8400;
}

button.remove-button {
  background-color: #f44336;
}

button.remove-button:hover {
  background-color: #da190b;
}

input,
textarea {
  width: 100%;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #ccc;
}

textarea {
  height: 75px;
}

/* 4k and up devices (2650px)*/
@media (min-width: 2561px) {

  h1,
  h2,
  h3 {
    font-size: 3rem;
    color: #2c3e50;
  }

  nav ul {
    padding: 20px 0;
    background-color: #333333;
  }

  .section-content {
    padding: 20px;
    background-color: #f0f0f0;
  }

  .experience,
  .connect {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  }
}

/* Large Laptops to 4k (1440px) */
@media (min-width: 1441px) and (max-width: 2560px) {

  h1,
  h2,
  h3 {
    font-size: 2.8rem;
    color: #2c3e50;
  }

  nav ul {
    padding: 18px 0;
  }

  .section-content {
    padding: 18px;
    background-color: #e0e0e0;
  }

  .experience,
  .connect {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }
}

/* Laptops (1024px)*/
@media (min-width: 1025px) and (max-width: 1440px) {

  h1,
  h2,
  h3 {
    font-size: 2.2rem;
    color: #39424e;
  }

  nav ul {
    padding: 20px 0;

  }

  img[alt] {
    border: 2px solid #ffb6fc;
  }

  .experience {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }

  .connect {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
  }

  .social-icons {
    display: grid;
    grid-column: span 6;
  }
}

/* tablets to small laptops (768px) */
@media (min-width: 769px) and (max-width: 1024px) {

  h1,
  h2,
  h3 {
    font-size: 2.3rem;
    color: #2c3e50;
  }

  nav ul {
    padding: 16px 0;
  }

  .section-content {
    padding: 16px;
    background-color: #d0d0d0;
  }

  .experience,
  .connect {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
}

/* Large mobile devices to tablet (425px)*/
@media (min-width: 426px) and (max-width: 768px) {

  h1,
  h2,
  h3 {
    font-size: 2rem;
    color: #2c3e50;
  }

  nav ul {
    padding: 10px 0;
    background-color: #666;
  }

  .section-content {
    padding: 15px;
    background-color: #d3d3d3;
  }

  .experience,
  .connect {
    display: grid;
    grid-template-columns: 1fr;
  }
}

/* Medium moblie devices (375px)*/
@media (min-width: 376px) and (max-width: 425px) {

  h1,
  h2,
  h3 {
    font-size: 1.8rem;
    color: #2c3e50;
  }

  nav ul {
    padding: 8px 0;
  }

  .section-content {
    padding: 12px;
    background-color: #c7c7c7;
  }
}

/* Small mobile devices (320px) */
@media (max-width: 375px) {

  h1,
  h2,
  h3 {
    font-size: 1.6rem;
    color: #2c3e50;
  }

  nav ul {
    padding: 6px 0;

  }

  .section-content {
    padding: 10px;
    background-color: #bcbcbc;
  }
}

